deployment/manifests/deployments.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: organizer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: organizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data/
      volumes:
      - name: postgres-data
        hostPath:
          path: /organizer/db/

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  namespace: organizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
      - name: notifier
        image: lukasblaha/organizer-notifier:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reminder
  namespace: organizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reminder
  template:
    metadata:
      labels:
        app: reminder
    spec:
      containers:
      - name: reminder
        image: lukasblaha/organizer-reminder:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
