deployment/manifests/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: organizer
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: notifier
  namespace: organizer
spec:
  selector:
    app: notifier
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reminder
  namespace: organizer
spec:
  selector:
    app: reminder
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
